--- a/Site/carMeets/backend/package.json
+++ b/Site/carMeets/backend/package.json
@@ -9,8 +9,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.14",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
