--- a/Site/carMeets/backend/package.json
+++ b/Site/carMeets/backend/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
