--- a/Site/carMeets/frontend/package.json
+++ b/Site/carMeets/frontend/package.json
@@ -33,7 +33,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.109",
     "@types/systemjs": "^0.20.6",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
